@@ -1,3 +1,14 @@
+2006-03-09  Michael Natterer  <mitch@gimp.org>
+
+	* app/widgets/gimpuimanager.[ch]: added "show-tooltip" and
+	"hide-tooltip" signals. Connect to each menu item's
+	enter-notify-event and leave-notify-event. On enter, emit
+	show-tooltip, on leave emit hide-tooltip.
+
+	* app/display/gimpdisplayshell.c: connect to the menubar ui
+	manager's show-tooltip and hide-tooltip signals and show the tip
+	in the display's status bar.
+
 2006-03-09  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/psd.c: create empty layers of image size instead
